		* More info in the Kad tab
		* Improved gaplist performance
		* Ported chat captchas (receive and send) 
		  and "Advanced Chat Spam Filter" from eMule
		* Allow download of multiple search results if search list 
		  is sorted by status (thanks to DarkNRG)
		* Fixed CFile::SetLength for large files
		* Reduce file handle usage by closing part files after idle time
		* Speed up selection of shared directories with many subdirectories 

	Vollstrecker:
		* Unify copyright lines
		* Fixed clean and distclean targets for make
		* Various Updates in debian/ see debian/changelog
		* Added crash handling in command-line tools

	Wuischke:
		* Simplify browser selection
		* Use DoIconize() for dclick on tray icon, too
		* Fix minimizing from tray icon
		* Add option to show chat messages in log
		* Add option to specify amuleweb binary location
		* Fix amuleweb progress bar display for files > 4GB
		* Make EC authentication procedure more secure
		* Add support for categories to ed2k

	Special Thanks To:
		* Greek for his contributions to aMule's user interface.
		* btkaos for his important work finding the source of bugs.

--------------------------------------------------------------------------------

Version 2.2.4 - The "we didn't have a .4 version since... well... long ago" version.
----------
2009-04-03

	freddy77:
		* Plugged various memory leaks.

	FreeToGo:
		* Add comment to desktop file to allow autostart in Gnome

	gabrielix:
		* Compilation fix for gcc-4.3.2.

	Gaznevada:
		* Compilation fix for IRIX.
		* Fixed file handles on IRIX.

	GonoszTopi:
		* Fixed compilation of Format.cpp for some platforms.
		* Fixed wxWidgets socket library initialization.
		* Fixed partfile importer destroying imported data.
		* Separated GUI and core code in partfile importer, thus fixing
		  occasional crashes/hangs.
		* Fixed GeoIP-enabled builds crashing on 64b boxes.
		* Added another common URN ID to the Magnet link handler.